--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,10 +1,13 @@
 <h1>タスク一覧</h1>
-
+  
 <ul>
   <% @tasks.each do |task| %>
-    <li><%= link_to task.id, task %> : <%= task.title %> &gt; <%= task.content %></li>
+    <li><%= link_to task.id, task %> : <%= task.user.name %> : <%= task.title %> &gt; <%= task.content %></li>
   <% end %>
 </ul>
+  
 <%= paginate @tasks %>
-
+  
 <%= link_to "新規タスクの投稿", new_task_path %>
+<%= link_to 'ログアウト', logout_path, method: :delete %>
+  
