--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,5 +1,9 @@
 <h1>タスク新規作成ページ</h1>
 
-<%= render 'form', task: @task %>
+<div>
+  <%= render 'form', task: @task %>
+</div>
 
-<%= link_to "一覧に戻る", tasks_path %> 
+<div>
+  <%= link_to "一覧に戻る", tasks_path %>
+</div>
